[package]
name = "solana-snapshot-downloader"
version = "0.1.0"
edition = "2021"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.8", features = ["derive"] }
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
serde = {version="1.0.136", features = ["derive"]}
serde_json = "1.0.79"
rayon = "1.5.1"
solana-client = "1.10.5"