[package]
name = "solana-snapshot-downloader"
version = "0.0.2"
edition = "2021"
default-run = "solana-snapshot-downloader"
description = "Downloads a solana snapshot"
keywords = ["solana"]
license = "Unlicense"

[[bin]]
name = "solana-snapshot-downloader"
path = "src/bin/main.rs"

[dependencies]
clap = { version = "3.1.8", features = ["derive"] }
reqwest = { version = "0.11.10", features = ["blocking", "json", "stream"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
rayon = "1.5.1"
solana-client = "1.10.5"
indicatif = "0.16.2"
tokio = { version = "1.13.0", features = ["full"] }
futures-util = "0.3.14"

